Sat Jul 12 15:21:24 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* import.c, rcs.h (add_rcs_file): New argument key_opt replaces
	access to global variable keyword_opt.  New arguments desctext and
	desclen allow one to set the description.  If add_vhead is NULL,
	then omit a revision, like rcs -i.
	* import.c (process_import_file), mkmodules.c (init): Change
	callers.
	* subr.c, cvs.h (get_file): New function, adapted from code in
	update_entries.
	* client.c (update_entries): Call it.
	* commit.c (checkaddfile): Create new RCS files with add_rcs_file
	rather than rcs -i.

Fri Jul 11 12:14:54 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (join_file): Handle binary files ourself rather than
	passing them to RCS_merge (which sort of tries to handle binary
	files, but does so badly).
	* sanity.sh (binfile2): New "brmod", "brmod-trmod", and
	"brmod-wdmod" tests test for this fix.

	* add.c (add): Exit status is now nonzero if any of the arguments
	failed (already was mostly true, make it true for the new sanity
	check).  Move check for '/' (now ISDIRSEP) up to sanity check, so
	the client does it too.
	* sanity.sh (errmsg2): Test for this fix.

Thu Jul 10 00:02:54 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add): Check for CVSADM, ".", and "..", and skip any
	attempt to add them.
	* sanity.sh (errmsg2): New tests, tests for above fix.

	* main.c (main): In text printed upon --version, also refer
	people to --help.

	* rcscmds.c (RCS_exec_rcsdiff): Add comment about timezones.

	* server.c, cvs.h (cvs_output_binary): New function.
	* rcs.c (RCS_checkout): For a binary file, call cvs_output_binary
	rather than cvs_output.
	* client.c (handle_mbinary): New function.
	(responses): Add "Mbinary".

Tue Jul  8 12:18:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (get_homedir): Add comment about root vs. user
	directory in pserver server.

Mon Jul  7 14:39:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
